# octo

./: .gitignore  CLAUDE.md  README.md  cef_split_app.py  fixed_pty_terminal.py  icon.icns  icon.png.bak  index.html  main.js  main.py  package-lock.json  package.json  preload.js  proper_terminal.py  real_pty_terminal.py  renderer.js  requirements.txt  requirements_cef.txt  run.py  run_cef.py  run_fixed_pty.py  run_proper_terminal.py  run_real_pty.py  run_split.py  simple_browser.py  split_app.py  split_app_fixed.py  split_same_window.py  split_working.py  style.css  terminal-only.html  test-browser-tabs.md  test-bundle.js  test-xterm.html  webpack.config.js
cef-oauth-app/: .gitignore  CMakeLists.txt  README.md  build.sh  download-cef.sh
cef-oauth-app/resources/: test.html
cef-oauth-app/resources/mac/: Info.plist.in
cef-oauth-app/src/: app.cpp  app.h  browser_window.cpp  browser_window.h  client.cpp  client.h  main.cpp  main_handler.cpp  main_handler.h  native_window_mac.h  native_window_mac.mm  oauth_handler.cpp  oauth_handler.h  simple_browser_window.cpp
external-js/: fontawesome.js
src/: bundle.js
